<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_transparent_dialog"
        android:minHeight="250dp"
        android:minWidth="250dp">

        <RelativeLayout
            android:id="@+id/reset_pass_layout"
            android:layout_width="300dp"
            android:layout_height="270dp"
            android:gravity="center"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reset_pass_title"
                style="@style/MainMiddleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:lines="2"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/reset_pass_hint" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reset_pass_input_layout"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:errorEnabled="true"
                android:layout_below="@+id/reset_pass_title"
                android:hint="@string/email_hint"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/colorAccent"
                app:errorTextAppearance="@style/InputLayoutErrorText"
                app:hintTextAppearance="@style/InputLayoutHintText">

                <EditText
                    android:id="@+id/reset_pass_email_et"
                    style="@style/MainEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/reset_pass_progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:indeterminateTintMode="src_atop"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/reset_pass_tv"
                style="@style/MainTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAllCaps="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"
                android:text="@string/reset_password" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
